FullSb1-27-apr-15/src/objects/Setting_Disabled__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Contact_syncProgramServicer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact_syncProgramServicer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_syncProgram__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact_syncProgram</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_syncStartTermServicer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact_syncStartTermServicer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_syncStartTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact_syncStartTerm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_OverrideCountries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead_OverrideCountries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_OverridePrograms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead_OverridePrograms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_DeleteRequirements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity_DeleteRequirements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_EnforcePerContactLimit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity_EnforcePerContactLimit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_UpdateAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity_UpdateAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_UpdateRequirements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity_UpdateRequirements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_syncOwnerServicer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity_syncOwnerServicer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_syncOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity_syncOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_syncProgramServicer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity_syncProgramServicer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_syncProgram__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity_syncProgram</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_syncStartTermServicer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity_syncStartTermServicer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_syncStartTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity_syncStartTerm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validate_Requirement_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validate Requirement Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>accountSitecoreRoleTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>accountSitecoreRoleTrigger</label>
        <type>Checkbox</type>
    </fields>
    <label>Setting: Disabled Code</label>
</CustomObject>